Build html skeleton

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <aside></aside>
+    <main>
+        <article></article>
+        <form action="" method=""></form>
+        <section></section>
+    </main>
 </body>
 </html>
