Add background to side hero

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <aside></aside>
+    <aside class="side-hero">
+    </aside>
     <main>
         <article></article>
         <form action="" method=""></form>
