Add logo with tinted background

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <aside class="side-hero">
+        <div class="logo-container">
+            <img src="img/odin-lined.png">
+            <h1 class="logo-text">ODIN</h1>
+        </div>
     </aside>
     <main>
         <article></article>
