Add author note in hero section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <img src="img/odin-lined.png">
             <h1 class="logo-text">ODIN</h1>
         </div>
+        <footer class="image-author">Photo by <u>Halie West</u> on <u>Whiplash</u></footer>
     </aside>
     <main>
         <article></article>
