Make layout more transparent
body takes all avaliable space and is also a flex container

--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
         </div>
         <footer class="image-author">Photo by <u>Halie West</u> on <u>Whiplash</u></footer>
     </aside>
-    <main>
-        <article></article>
+    <main class="content">
+        <article class="about-service">
+            <p>This is not real online service! You know you need something like this in your life to help you realize your deepest dreams.
+                <br/>Sign up now and get started.
+            </p>
+            <p>
+                You know you want to.
+            </p>
+        </article>
         <form action="" method=""></form>
         <section></section>
     </main>
