--- a/index.html
+++ b/index.html
@@ -23,7 +23,33 @@
                 You know you want to.
             </p>
         </article>
-        <form action="" method=""></form>
+        <form action="index.html" method="get" class="registration-form">
+            <h1>Let's do this!</h1>
+            <div>
+                <label for="first-name">FIRST NAME</label>
+                <input type="text" name="first-name" class="first-name" required>
+            </div>
+            <div>
+                <label for="last-name">LAST NAME</label>
+                <input type="text" name="last-name" class="last-name" required>
+            </div>
+            <div>
+                <label for="email">EMAIL</label>
+                <input type="email" name="email" class="email" required>
+            </div>
+            <div>
+                <label for="phone-number">PHONE NUMBER</label>
+                <input type="tel" name="phone-number" class="phone-number" required>
+            </div>
+            <div>
+                <label for="password">PASSWORD</label>
+                <input type="password" name="password" class="password" required>
+            </div>
+            <div>
+                <label for="confirm-password">CONFRIM PASSWORD</label>
+                <input type="password" name="confirm-password" class="confirm-password" required>
+            </div>
+        </form>
         <section></section>
     </main>
 </body>
