Style form layout

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </article>
         <form action="index.html" method="get" class="registration-form">
             <h1>Let's do this!</h1>
+            <div class="inputs-container">
             <div>
                 <label for="first-name">FIRST NAME</label>
                 <input type="text" name="first-name" class="first-name" required>
@@ -48,6 +49,7 @@
             <div>
                 <label for="confirm-password">CONFRIM PASSWORD</label>
                 <input type="password" name="confirm-password" class="confirm-password" required>
+            </div>
             </div>
         </form>
         <section></section>
