Style text inputs more fix labels
buttons react on focus, invalid, labels focus on input when clicked

--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
             <div class="inputs-container">
             <div>
                 <label for="first-name">FIRST NAME</label>
-                <input type="text" name="first-name" class="first-name" required>
+                <input type="text" name="first-name" id="first-name" required>
             </div>
             <div>
                 <label for="last-name">LAST NAME</label>
-                <input type="text" name="last-name" class="last-name" required>
+                <input type="text" name="last-name" id="last-name" required>
             </div>
             <div>
                 <label for="email">EMAIL</label>
-                <input type="email" name="email" class="email" required>
+                <input type="email" name="email" id="email" required>
             </div>
             <div>
                 <label for="phone-number">PHONE NUMBER</label>
-                <input type="tel" name="phone-number" class="phone-number" required>
+                <input type="tel" name="phone-number" id="phone-number" required>
             </div>
             <div>
                 <label for="password">PASSWORD</label>
-                <input type="password" name="password" class="password" required>
+                <input type="password" name="password" id="password" required>
             </div>
             <div>
                 <label for="confirm-password">CONFRIM PASSWORD</label>
-                <input type="password" name="confirm-password" class="confirm-password" required>
+                <input type="password" name="confirm-password" id="confirm-password" required>
             </div>
             </div>
         </form>
