add password validation message

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <div>
                 <label for="password">PASSWORD</label>
                 <input type="password" name="password" id="password" required>
+                <span></span>
             </div>
             <div>
                 <label for="confirm-password">CONFRIM PASSWORD</label>
