add bottom part structure

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
             </div>
             </div>
         </form>
-        <section></section>
+        <section>
+            <input type="submit" form="create-account-form" value="Create Account">
+            <p>Already have an account? <span>Log in</span></p>
+        </section>
     </main>
 </body>
 </html>
