prevent styling all types of inputs

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 You know you want to.
             </p>
         </article>
-        <form action="index.html" method="get" class="registration-form">
+        <form id="create-account-form" action="index.html" method="get" class="registration-form">
             <h1>Let's do this!</h1>
             <div class="inputs-container">
             <div>
