add global padding in main

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             </div>
         </form>
-        <section>
+        <section class="create-account">
             <input type="submit" form="create-account-form" value="Create Account">
             <p>Already have an account? <span>Log in</span></p>
         </section>
