--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </form>
         <section class="create-account">
             <input type="submit" form="create-account-form" value="Create Account">
-            <p>Already have an account? <span>Log in</span></p>
+            <p>Already have an account? <span class="log-in">Log in</span></p>
         </section>
     </main>
 </body>
